<resources>
    <string name="app_name">CarrotIsDelicious</string>
    <string name="binding_error">Binding not initialized to reference the view.</string>

    <!-- CreateActivity -->
    <string name="item_title">제목</string>
    <string name="item_deal_write">중고거래 글쓰기</string>
    <string name="item_finish">완료</string>
    <string name="item_category">카테고리</string>
    <string name="item_won">&#65510;</string>
    <string name="item_money">가격</string>
    <string name="item_sug_money">가격 제안받기</string>
    <string name="item_no_sug_money">가격 제안 불가</string>
    <string name="item_write">게시글을 작성해주세요.</string>
    <string name="item_word">자주 쓰는 문구</string>
    <string name="item_town">보여줄 동네 설정</string>

    <!-- ReadActivity -->
    <string name="read_chat_list">채팅 목록 보기</string>
    <string name="home_menu_home">홈</string>
    <string name="home_menu_town">동네생할</string>
    <string name="home_menu_myplace">내 근처</string>
    <string name="home_menu_chat">채팅</string>
    <string name="home_menu_my">나의 당근</string>

    <!-- StateBottomSheet -->
    <string name="state_selling">판매중</string>
    <string name="state_completed">거래완료</string>
    <string name="state_reserving">예약중</string>
    <string name="read_temperature">36.5ºC</string>
    <string name="read_manner_temperature">매너온도</string>
    <string name="read_dot">·</string>
    <string name="read_views">조회</string>
    <string name="read_price_won">원</string>
    <string name="read_price_suggestion_true">가격 제안하기</string>
    <string name="read_price_suggestion_false">가격 제안 불가</string>
</resources>
